added crud operations for book