@@ -2,12 +2,16 @@ package com.onyshkiv.libraryspring.controller;
 
 import com.onyshkiv.libraryspring.DTO.BookDTO;
 import com.onyshkiv.libraryspring.entity.Book;
+import com.onyshkiv.libraryspring.exception.book.BookNotCreatedException;
 import com.onyshkiv.libraryspring.service.BookService;
+import jakarta.validation.Valid;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -25,11 +29,40 @@ public class BookController {
     }
 
     @GetMapping()
-    public List<BookDTO> getAllBooks() {
-        return bookService.getAllBooks()
+    public ResponseEntity<List<BookDTO>> getAllBooks() {
+        List<BookDTO> books = bookService.getAllBooks()
                 .stream()
                 .map(this::convertToBookDTO)
-                .collect(Collectors.toList());
+                .toList();
+        return new ResponseEntity<>(books, HttpStatus.OK);
+    }
+
+
+    @GetMapping("/{isbn}")
+    public ResponseEntity<BookDTO> getBookByIsbn(@PathVariable("isbn") String isbn) {
+        Book book = bookService.getBookByIsbn(isbn);
+        return new ResponseEntity<>(convertToBookDTO(book), HttpStatus.OK);
+    }
+
+    @PostMapping()
+    public ResponseEntity<BookDTO> saveBook(@RequestBody @Valid BookDTO book, BindingResult bindingResult) {
+        if (bindingResult.hasErrors()) throw new BookNotCreatedException(bindingResult.getFieldErrors().toString());
+        Book savedBook = bookService.saveBook(convertToBook(book));
+        return new ResponseEntity<>(convertToBookDTO(savedBook), HttpStatus.OK);
+    }
+
+    @PatchMapping("/{isbn}")
+    public ResponseEntity<BookDTO> updateBook(@PathVariable("isbn") String isbn, @RequestBody @Valid BookDTO book, BindingResult bindingResult) {
+        if (bindingResult.hasErrors())
+            throw new BookNotCreatedException(bindingResult.getFieldErrors().toString());//todo може то краще робити через ті валідатори
+        Book updatedBook = bookService.updateBook(isbn, convertToBook(book));
+        return new ResponseEntity<>(convertToBookDTO(updatedBook), HttpStatus.OK);
+    }
+
+    @DeleteMapping("/{isbn}")
+    public ResponseEntity<BookDTO> deleteBookByIsbn(@PathVariable("isbn") String isbn) {
+        Book book = bookService.deleteBookByIsbn(isbn);
+        return new ResponseEntity<>(convertToBookDTO(book), HttpStatus.OK);
     }
 
 
@@ -37,5 +70,8 @@ public class BookController {
         return modelMapper.map(book, BookDTO.class);
     }
 
+    private Book convertToBook(BookDTO bookDTO) {
+        return modelMapper.map(bookDTO, Book.class);
+    }
 
 }
